# swagger/docs/swagger.json
@@ -192,7 +192,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/swagger_controller.Article"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/swagger_controller.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/swagger_controller.Article"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
@@ -367,6 +379,18 @@
                 },
                 "title": {
                     "description": "标题",
+                    "type": "string"
+                }
+            }
+        },
+        "swagger_controller.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "data": {},
+                "msg": {
                     "type": "string"
                 }
             }
